<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DLMainActivity">

    <item
        android:id="@+id/menu_item_share"
        android:right="20dp"
        android:title="@string/menu_item_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_rate"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/menu_item_rate"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_item_help"
        app:showAsAction="ifRoom" />
</menu>
