<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="12dp"
    tools:context="com.fl.dlc.fragment.TypeAndFormatFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/type_and_format_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/type_and_format_header"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/type_and_format_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/type_and_format_desc"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/format_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/format_header"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/format_spinner"
                style="@style/spinner_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/format_entries"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <TextView
                android:id="@+id/type_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_header"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/type_spinner"
                style="@style/spinner_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:entries="@array/type_entries"
                android:paddingBottom="5dp"
                android:paddingTop="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/type_and_format_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="moveToFirst_InningsDetails"
            android:text="@string/type_and_format_next_button_text" />
    </LinearLayout>
</ScrollView>